Table(list): Add table list